Try to get surefire working